    - Added mod setting for re-enabling the vanilla damage bonuses
    - Increased flamethrower-2 to need refined flammables 4
    - Increased minimum science for damage increase technologies to be 150 science packs
    - Doubled science cost for turrets 2 and lightning turrets
    - Decreased personal cannon equipment requirement to cannon shell damage 4
    - Decreased personal cannon equipment requirement to energy weapons damage 3
  Bugfixes:
    - Fixed broken nuclear artillery shells due to game engine update
    - Fixed mending and reinforced walls and gates not correctly getting resistances

---------------------------------------------------------------------------------------------------
Version: 0.17.15
Date: 5. 3. 2019
  Tweaks:
    - Added projectile lead targeting to shotgun, capsule launcher, cannon, rapid cannon, and advanced flamethrower turrets
    - Increased rocket turret cooldown to 300

---------------------------------------------------------------------------------------------------
Version: 0.17.14
Date: 5. 2. 2019
  Tweaks:
    - Added mod setting to toggle if nuclear generator equipment consumes uranium cells
    - Increased oil generator output to 16MW
    - Doubled oil generator size
    - Increased oil generator emissions per minute to 6
    - Increased oil generator cost 2 chemical plants, 2 steel furnace, 40 electronic circuits, 30 copper plates
    - Slightly lightened the oil generator color
  Bugfixes:
    - Fixed 0.17.35 changes
    - Fixed emissions_per_minute
    - Fixed Power armor research change
    - Fixed player entity renamed    

---------------------------------------------------------------------------------------------------
Version: 0.17.13
Date: 4. 27. 2019
  Improvements:
    - Added advanced beam turret
  Tweaks:
    - Changed lightning turret to an AOE projectile due the line beam attacks not working properly
    - Increased cannon and rapid cannon min range to 12
    - Increased gun turret mk2 range to 24